<resources>
    <string name="app_name">KMlink</string>
    <string name="title_Setting">Settings</string>
    <string name="title_Condition">Condition</string>
    <string name="title_ReadWrite">Read/Write</string>
    <string name="title_OSC">OSC</string>
    <string name="title_More">More</string>
    <string name="A0_00">User password</string>
    <string name="A0_01">Control mode</string>
    <string name="A0_02">Main reference frequency selector</string>
    <string name="A0_03">Digital reference frequency</string>
    <string name="A0_04">Methods of inputting operating commands</string>
    <string name="A0_05">Running direction</string>
    <string name="A0_06">Acc time 1</string>
    <string name="A0_07">Dec time 1</string>
    <string name="A0_08">Input terminal X1 function selection</string>
    <string name="A0_09">Input terminal X2 function selection</string>
    <string name="A0_10">Terminal control mode selection</string>
    <string name="A0_11">Bi-direction pen-collector output terminal Y1</string>
    <string name="A0_12">Output functions of relay R1</string>
    <string name="A0_13">Y1 terminal output</string>
    <string name="A0_14">Functions of terminal AO1</string>
    <string name="A0_15">PG type</string>
    <string name="A0_16">Number of pulses per revolution of PG</string>
    <string name="A0_17">Fault masking selection 1</string>
    <string name="A0_18">Rated power of AC motor 1</string>
    <string name="A0_19">Number of polarities 0f AC motor 1</string>
    <string name="A0_20">Rated power of PMSM motor 1</string>
    <string name="A0_21">Number of polarities 0f PMSM motor 1</string>
    <string name="A0_22">OldParameter initialization</string>
    <string name="A0_24">Rated voltage of AC motor</string>
    <string name="A0_25">Rated current of AC motor</string>
    <string name="A0_26">Rated frequency of AC motor</string>
    <string name="A0_27">Rated speed of AC motor</string>
    <string name="A0_28">Rated voltage of PMSM motor 1</string>
    <string name="A0_29">Rated current of PMSM motor 1</string>
    <string name="A0_30">Rated speed of PMSM motor 1</string>
    <string name="A0_31">Max output frequency</string>
    <string name="A0_32">Torque boost</string>
    <string name="A0_33">Starting mode</string>
    <string name="A0_34">Stopping mode</string>
    <string name="A0_35">Speed/torque control mode</string>
    <string name="A0_36">Carrier wave frequency</string>
    <string name="A0_37">Motor type selection</string>
    <string name="A0_38">Reference torque selection</string>
    <string name="A0_39">Digital reference torque</string>
    <string name="A0_40">Input terminal X3 function selection</string>
    <string name="A0_41">Input terminal X4 function selection</string>
    <string name="A0_42">Input terminal X5 function selection</string>
    <string name="A0_43">Input terminal X6 function selection</string>
    <string name="A0_44">Functions of terminal A02</string>
    <string name="A0_45">Output functions of relay R2</string>
    <string name="A0_46">V/F curve setting</string>
    <string name="A0_47">V/F frequency value F3</string>
    <string name="A0_48">V/F voltage value V3</string>
    <string name="A0_49">V/F frequency value F2</string>
    <string name="A0_50">V/F voltage value V2</string>
    <string name="A0_51">V/F frequency value F1</string>
    <string name="A0_52">V/F voltage value V1</string>
    <string name="A0_53">Cut-off point used for manual torque boost</string>
    <string name="B0_00">Output frequency</string>
    <string name="B0_01">Output voltage</string>
    <string name="B0_02">Output current</string>
    <string name="B0_03">Motor power</string>
    <string name="B0_04">Motor actual frequency</string>
    <string name="B0_05">Device running status</string>
    <string name="B0_06">Input terminals status</string>
    <string name="B0_07">Output terminals status</string>
    <string name="B0_08">AI1 input voltage</string>
    <string name="B0_09">Temperature of heatsink 1</string>
    <string name="B0_10">Fault record 1</string>
    <string name="B0_11">Bus voltage of the latest failure</string>
    <string name="B0_12">Actual current of the latest failure</string>
    <string name="B0_13">Operation frequency of the latest failure</string>
    <string name="B0_14">Custom-made version number</string>
    <string name="B0_15">Software date</string>
    <string name="B0_16">Status word</string>
    <string name="B0_17">Bus voltage</string>
    <string name="B0_18">AI1 input</string>
    <string name="B0_19">AI2 input</string>
    <string name="B0_20">AO1 output</string>
    <string name="B0_21">AO2 output</string>
    <string name="B0_22">Percentage of AI2 after regulation</string>
    <string name="B0_23">Percentage of Keyboard potentiometer after regulation</string>
    <string-array name="A0_select">
        <item>@string/A0_01</item>
        <item>@string/A0_02</item>
        <item>@string/A0_04</item>
        <item>@string/A0_05</item>
        <item>@string/A0_08</item>
        <item>@string/A0_09</item>
        <item>@string/A0_10</item>
        <item>@string/A0_11</item>
        <item>@string/A0_12</item>
        <item>@string/A0_13</item>
        <item>@string/A0_14</item>
        <item>@string/A0_15</item>
        <item>@string/A0_17</item>
        
        <item>@string/A0_33</item>
        <item>@string/A0_34</item>
        <item>@string/A0_35</item>
        <item>@string/A0_37</item>
        <item>@string/A0_38</item>
        <item>@string/A0_40</item>
        <item>@string/A0_41</item>
        <item>@string/A0_42</item>
        <item>@string/A0_43</item>
        <item>@string/A0_44</item>
        <item>@string/A0_45</item>
        <item>@string/A0_46</item>
    </string-array>
    <string name="OK">OK</string>
    <string name="Read_Data">Read Data</string>
    <string name="Register_address">Register address</string>
    <string name="Current_value">Current value</string>
    <string name="Write_data">Write data</string>
    <string name="Set_value">Set value</string>
    <string name="READ">READ</string>
    <string name="WRITE">WRITE</string>
    <string name="Clear">Clear</string>
    <string name="reload_gap">Refresh interval(ms)</string>
</resources>