<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_first">

    <fragment
        android:id="@+id/navigation_first"
        android:name="com.example.pagedemo.ui.firstpage.FirstpageFragment"
        android:label="@string/title_Setting"
        tools:layout="@layout/fragment_first" />

    <fragment
        android:id="@+id/navigation_second"
        android:name="com.example.pagedemo.ui.secondpage.SecondpageFragment"
        android:label="@string/title_Condition"
        tools:layout="@layout/fragment_second" />

    <fragment
        android:id="@+id/navigation_third"
        android:name="com.example.pagedemo.ui.thirdpage.ThirdpageFragment"
        android:label="@string/title_ReadWrite"
        tools:layout="@layout/fragment_third" />

    <fragment
        android:id="@+id/navigation_fourth"
        android:name="com.example.pagedemo.ui.fourthpage.FourthpageFragment"
        android:label="@string/title_OSC"
        tools:layout="@layout/fragment_fourth" />
</navigation>