<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Read_Data"
                android:textColor="@color/grayer"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/Register_address"
                        android:textAlignment="viewStart"
                        android:textColor="@color/grayer" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Current_value"
                        android:textAlignment="center"
                        android:textColor="@color/grayer" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <Spinner
                        android:id="@+id/spinner0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingRight="5dp" />

                    <TextView
                        android:id="@+id/currentValue"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textAlignment="center" />

                    <Button
                        android:id="@+id/btnRead"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/button"
                        android:text="@string/READ" />
                </TableRow>


            </TableLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Write_data"
                android:textColor="@color/grayer"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/Register_address"
                        android:textAlignment="viewStart"
                        android:textColor="@color/grayer" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Set_value"
                        android:textAlignment="center"
                        android:textColor="@color/grayer" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingRight="5dp" />
                    <!--            android:layout_width="match_parent"-->

                    <EditText
                        android:id="@+id/setValue"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:digits="0123456789abcdefABCDEF"
                        android:inputType="number"
                        android:maxLength="4"
                        android:textAlignment="center"
                        android:textColor="@color/mtrl_on_surface_emphasis_high_type" />
                    <!--                android:layout_width="match_parent"-->

                    <Button
                        android:id="@+id/btnWrite"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/button"
                        android:text="@string/WRITE" />
                    <!--            android:layout_width="wrap_content"-->
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>